added newer file version

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,14 +12,14 @@
    <link rel = "stylesheet"
   type = "text/css"
   href = "bootstrapportfolio.css" />
-  
+
   <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|PT+Sans&display=swap" rel="stylesheet">
-  
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  
-  
-  
- 
+
+
+
+
 
 </head>
 
@@ -36,7 +36,9 @@
         <li class="nav-item">
           <a class="nav-link" href="index.html">About</a>
         </li>
-   
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
@@ -47,9 +49,42 @@
 <br>
 <br>  
 
+<div class="container">
+  <div class="row">
+   <span class="border border-danger rounded shadow-lg p-3 mb-5 p-3 mb-2 bg-secondary text-white" class="rounded-right">
+    <div class="col-md-12">
+      <div class="page-header">
+        <h1>Portfolio</h1>
 
-    
-  
+
+        <figure class="figure">  <img src="images/placeholder1.jpg" class="rounded float-left p-3" alt="...">
+          <figcaption class="figcaption">Hangman</figcaption>
+       </figure>
+
+        <figure class="figure"><img src="images/placeholder2.jpg" class="rounded float-left p-3" alt="...">
+          <figcaption class="figcaption">RPG Game</figcaption>
+        </figure>
+
+        <figure class="figure">  <img src="images/placeholder3.jpg" class="rounded float-left p-3" alt="...">
+          <figcaption class="figcaption">Trivia Game</figcaption>
+        </figure>
+
+        <figure class="figure"> <img src="images/placeholder4.jpg" class="rounded float-left p-3" alt="...">
+          <figcaption class="figcaption">Appalachia</figcaption>
+        </figure>
+
+
+        <figure class="figure"> <img src="images/placeholder5.jpg" class="rounded float-left p-3" alt="...">
+          <figcaption class="figcaption">FenceHQ</figcaption>
+      </figure>
+
+        </span>
+      </div>
+      </div>
+    </div>
+
+
+
 
 <!-- jQuery CDN -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -63,4 +98,4 @@
 </html>
 
 
-</html>
+</html> 
