added acutal content created in portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,18 +56,18 @@
       <div class="page-header">
         <h1>Portfolio</h1>
 
-
-        <figure class="figure">  <img src="images/placeholder1.jpg" class="rounded float-left p-3" alt="...">
-          <figcaption class="figcaption">Hangman</figcaption>
-       </figure>
-
-        <figure class="figure"><img src="images/placeholder2.jpg" class="rounded float-left p-3" alt="...">
-          <figcaption class="figcaption">RPG Game</figcaption>
+        <figure class="figure"><img src="images/Screenshot_11.jpg" class="rounded float-left p-3" alt="...">
+          <a class="btn btn-primary" href="https://mc-moneta.herokuapp.com/" target="_blank">Moneta</a>
         </figure>
 
-        <figure class="figure">  <img src="images/placeholder3.jpg" class="rounded float-left p-3" alt="...">
-          <figcaption class="figcaption">Trivia Game</figcaption>
+        <figure class="figure"><img src="images/divelop.png" class="rounded float-left p-3" alt="...">
+          <a class="btn btn-primary" href="https://clarymt.github.io/Project-Divelop/" target="_blank">DIVelop</a>
         </figure>
+
+        <figure class="figure"><img src="images/clickyGame.png" class="rounded float-left p-3" alt="...">
+          <a class="btn btn-primary" href="https://clarymt.github.io/Clicky-Game/" target="_blank">Hiking Clicky Game</a>
+        </figure>
+
 
         <figure class="figure"> <img src="images/placeholder4.jpg" class="rounded float-left p-3" alt="...">
           <figcaption class="figcaption">Appalachia</figcaption>
