deleted unnecessary items in folder made some other adjustments

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,15 +68,14 @@
           <a class="btn btn-primary" href="https://clarymt.github.io/Clicky-Game/" target="_blank">Hiking Clicky Game</a>
         </figure>
 
-
-        <figure class="figure"> <img src="images/placeholder4.jpg" class="rounded float-left p-3" alt="...">
-          <figcaption class="figcaption">Appalachia</figcaption>
+        <figure class="figure"><img src="images/triviaGame.png" class="rounded float-left p-3" alt="...">
+          <a class="btn btn-primary" href="https://clarymt.github.io/triviagame1/" target="_blank">Hiking Clicky Game</a>
         </figure>
 
+        <figure class="figure"><img src="images/trainTaker.png" class="rounded float-left p-3" alt="...">
+          <a class="btn btn-primary" href="https://clarymt.github.io/Train-Firebase/" target="_blank">Train Scheduler</a>
+        </figure>
 
-        <figure class="figure"> <img src="images/placeholder5.jpg" class="rounded float-left p-3" alt="...">
-          <figcaption class="figcaption">FenceHQ</figcaption>
-      </figure>
 
         </span>
       </div>
