--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                           </div>
                           <div class="row">
                              <div class="col-md-3">
-                          <img src="images/profile.jpg" alt="Placeholder" class="img-thumbnail">
+                          <img src="images/photo.jpg" alt="Placeholder" class="img-thumbnail">
                             </div>
                             <div class="col-md-9">
                               <p>
