--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 <body background="images/background.jpg">
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-bottom">
-    <span id="blah" class="navbar-brand mb-1 h1"><h1>Matthew Clary.</h1></span>
+    <span id="title" class="navbar-brand mb-1 h1"><h1>Matthew Clary.</h1></span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
