fixed some formatting and created a better contact section and added github repo to portfolio

--- a/contact.html
+++ b/contact.html
@@ -47,42 +47,28 @@
 <br>
 <br>  
 
-    <div class="container">
+<div class="container">
+  <div class="row">
+   <span id="contactspan" class="border border-danger rounded shadow-lg p-3 mb-5 p-3 mb-2 bg-secondary text-white" class="rounded-right">
+    <div class="col-md-12">
+      <div class="page-header">
+          <h1>Contact</h1>
         <div class="row">
-         <span id="contactspan" class="border border-danger rounded shadow-lg p-3 mb-5 p-3 mb-2 bg-secondary text-white" class="rounded-right">
-          <div class="col-md-12">
-            <div class="page-header">
-              <h1>Contact</h1>
-            <div class="row">
-              <div class="container-fluid">
-
-
-                <form>
-                  <div class="form-group">
-                    <label for="exampleInputName1">Name</label>
-                    <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" placeholder="Enter name">
-                    <small id="nameHelp" class="form-text text-muted">We'll never share your name with anyone else.</small>
-                  </div>
-                  <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                  </div>
-                  <div class="form-group">
-                    <label for="exampleInputMessage1">Message</label>
-                    <input type="Message" class="form-control" id="exampleInputMessage1" placeholder="Message">
-                  </div>
-                  <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-              </div> 
-              </span>
-
-            </div>
-          </div>
+          <div class="col-md-9">
+            <h5 > Email: 
+              <a class="contactHyperlink" href="mailto:clarymt@me.com"> clarymt@me.com</a>
+            </h5> 
+            <h5 > LinkedIn: 
+              <a class="contactHyperlink" href="https://www.linkedin.com/in/matthew-clary-062571a7/">linkedin.com/in/matthew-clary-062571a7/</a>
+            </h5>
+            <h5 > GitHub: 
+              <a class="contactHyperlink" href="https://github.com/clarymt"> github.com/clarymt</a>
+            </h5>
+   
+    </span>
+  </div>
+</div>
+</div>
 
 
 
