--- a/portfolio.html
+++ b/portfolio.html
@@ -58,22 +58,27 @@
 
         <figure class="figure"><img src="images/Screenshot_11.jpg" class="rounded float-left p-3" alt="...">
           <a class="btn btn-primary" href="https://mc-moneta.herokuapp.com/" target="_blank">Moneta</a>
+          <a class="btn btn-primary" href="https://github.com/clarymt/Moneta" target="_blank">Github Repo</a>
         </figure>
 
         <figure class="figure"><img src="images/divelop.png" class="rounded float-left p-3" alt="...">
           <a class="btn btn-primary" href="https://clarymt.github.io/Project-Divelop/" target="_blank">DIVelop</a>
+          <a class="btn btn-primary" href="https://github.com/clarymt/Project-Divelop" target="_blank">Github Repo</a>
         </figure>
 
         <figure class="figure"><img src="images/clickyGame.png" class="rounded float-left p-3" alt="...">
           <a class="btn btn-primary" href="https://clarymt.github.io/Clicky-Game/" target="_blank">Hiking Clicky Game</a>
+          <a class="btn btn-primary" href="https://github.com/clarymt/Clicky-Game" target="_blank">Github Repo</a>
         </figure>
 
         <figure class="figure"><img src="images/triviaGame.png" class="rounded float-left p-3" alt="...">
-          <a class="btn btn-primary" href="https://clarymt.github.io/triviagame1/" target="_blank">Hiking Clicky Game</a>
+          <a class="btn btn-primary" href="https://clarymt.github.io/triviagame1/" target="_blank">Hiking Clicky Game</a>          
+          <a class="btn btn-primary" href="https://github.com/clarymt/triviagame1" target="_blank">Github Repo</a>
         </figure>
 
         <figure class="figure"><img src="images/trainTaker.png" class="rounded float-left p-3" alt="...">
           <a class="btn btn-primary" href="https://clarymt.github.io/Train-Firebase/" target="_blank">Train Scheduler</a>
+          <a class="btn btn-primary" href="https://github.com/clarymt/Train-Firebase" target="_blank">Github Repo</a>
         </figure>
 
 
