created descripition and technologies used in portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,26 +59,36 @@
         <figure class="figure"><img src="images/Screenshot_11.jpg" class="rounded float-left p-3" alt="...">
           <a class="btn btn-primary" href="https://mc-moneta.herokuapp.com/" target="_blank">Moneta</a>
           <a class="btn btn-primary" href="https://github.com/clarymt/Moneta" target="_blank">Github Repo</a>
+          <p>Moneta is a full stack MERN platform for patients at any stage of Alzheimer's and Dementia to keep their mind and brain stimulated.</p>
+          <p>Technologies Used: MongoDB, Express.js, React, Nodes.js, Mongoose, NPM, Bootstrap, Sequelize, Moment.js, Passport.js, and Multer</p>         
         </figure>
 
         <figure class="figure"><img src="images/divelop.png" class="rounded float-left p-3" alt="...">
           <a class="btn btn-primary" href="https://clarymt.github.io/Project-Divelop/" target="_blank">DIVelop</a>
           <a class="btn btn-primary" href="https://github.com/clarymt/Project-Divelop" target="_blank">Github Repo</a>
+          <p>Provides an all in one resource center for introductory web developers.</p>
+          <p>Technologies Used: HTML, CSS, JavaScript, News API, Google Books API, and Youtube API</p>
         </figure>
 
         <figure class="figure"><img src="images/clickyGame.png" class="rounded float-left p-3" alt="...">
           <a class="btn btn-primary" href="https://clarymt.github.io/Clicky-Game/" target="_blank">Hiking Clicky Game</a>
           <a class="btn btn-primary" href="https://github.com/clarymt/Clicky-Game" target="_blank">Github Repo</a>
+          <p>A memory game with React. Breaking up application's UI into components, managing component state, and responding to user events.</p>
+          <p>Technologies Used: React and Bootstrap</p>
         </figure>
 
         <figure class="figure"><img src="images/triviaGame.png" class="rounded float-left p-3" alt="...">
-          <a class="btn btn-primary" href="https://clarymt.github.io/triviagame1/" target="_blank">Hiking Clicky Game</a>          
+          <a class="btn btn-primary" href="https://clarymt.github.io/triviagame1/" target="_blank">Hiking Clicky Game</a> 
           <a class="btn btn-primary" href="https://github.com/clarymt/triviagame1" target="_blank">Github Repo</a>
+          <p>Test your knowledge of Nirvana with this multiple choice trivia game.</p>
+          <p>Technologies Used: JavaScript, jQuery, Bootstrap, HTML, and CSS</p>
         </figure>
 
         <figure class="figure"><img src="images/trainTaker.png" class="rounded float-left p-3" alt="...">
           <a class="btn btn-primary" href="https://clarymt.github.io/Train-Firebase/" target="_blank">Train Scheduler</a>
           <a class="btn btn-primary" href="https://github.com/clarymt/Train-Firebase" target="_blank">Github Repo</a>
+          <p>Plan your train trip with this awesome Firebase train scheduler.</p>
+          <p>Technologies Used: Firebase, Moment.js, JavaScript, Bootstrap v4 and HTML</p>
         </figure>
 
 
