added technical top skills on about me page:

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
               <p> Completed thru-hike of the Appalachian Trail in 2018. </p>
       </span>
     </div>
+    <div class="page-header">
+      <h1>Top Skills</h1>
+      <p class="btn btn-primary">HTML, CSS, JavaScript, React.js, Node.js, MySQL, MongoDB, Git, Command Prompt, jQuery, GitHub, responsiveness</p>
+    </div>
   </div>
   </div>
 
